--- a/style.css
+++ b/style.css
@@ -210,12 +210,18 @@
   }
 
   .product {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(5, 1fr);
+    place-items: center;
   }
 
   .list-product{
-    width: 230x;
+    width: 230px;
+  }
+
+  .product-name {
+    display: flex;
   }
 
   .product-name p {
@@ -225,6 +231,14 @@
     line-height: 20px;
     letter-spacing: 0;
     margin-bottom: 4px;
+  }
+
+  .title {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .price {
@@ -242,16 +256,23 @@
   }
 
   .like {
+    width: 30%;
     display: flex;
-    align-items: center;
+    justify-content: center;
   }
 
   .like p {
     margin-right: 5px;
   }
 
-  .product img {
-    width: 230px;
+  .image-product {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .image-product img {
+    width: 100%;
     height: 230px;
     border-radius: 24px;
   }
@@ -259,13 +280,12 @@
   footer {
     display: flex;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 30px;
+    padding: 20px 0 20px 0;
     background-color: rgb(249, 249, 249);
   }
 
   .footer {
-    width: 35%;
+    width: 40%;
     border-right: 1px solid rgb(227,227,227);
   }
 
@@ -281,7 +301,7 @@
   }
 
   .footer > p {
-    margin: 40px 0 20px 0;
+    margin: 40px 0 10px 0;
   }
 
   .header-news {
@@ -318,8 +338,25 @@
   }
 
   .f-right {
-    width: 70%;
+    width: 60%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.5fr;
+    font-size: 0.7rem;
+    line-height: 1;
   }
+
+  .mlr-40 {
+    padding: 0 30px 0 60px;
+    margin: 20px 0 0 100px;
+  }
+
+  .p-bold p:first-of-type {
+    font-weight: bold;
+  }
+
+  .f-right.mlr-40.p-bold div p:not(:first-child) {
+    opacity: 0.6;
+  }
+
+  
