--- a/style.css
+++ b/style.css
@@ -342,6 +342,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.5fr 0.5fr;
+    grid-template-areas:  
+    "buy help empty"
+    "sell term sosmed";
     font-size: 0.7rem;
     line-height: 1;
   }
@@ -359,4 +362,43 @@
     opacity: 0.6;
   }
 
+  .term {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+
+    align-self: flex-end;
+
+  }
+
+  .sosmed {
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+
+    align-self: flex-end;
+
+  }
   
+  .sosmed-icon {
+    display: flex;
+  }
+
+  .sosmed-icon svg {
+    width: 32px;
+    height: 32px;
+  }
+
+  .sosmed-icon svg:nth-of-type(1){
+    fill : rgb(210, 71, 121);
+  }
+
+  .sosmed-icon svg:nth-of-type(2){
+    fill : rgb(7, 106, 231);
+  }
+
+  .sosmed-icon svg:nth-of-type(3){
+    fill : rgb(71, 202, 210);
+  }
