--- a/style.css
+++ b/style.css
@@ -209,20 +209,17 @@
     color: rgb(33, 33, 33);
   }
 
-  .product {
-    display: grid;
+  /* .product {
     width: 100%;
-    grid-template-columns: repeat(5, 1fr);
-    place-items: center;
-  }
-
-  .list-product{
-    width: 230px;
-  }
-
-  .product-name {
+    column-gap: 1%;
     display: flex;
-  }
+    justify-content: space-between;
+  } */
+
+  /* .list-product{
+    max-width: 19%;
+    border: 1px solid green;
+  } */
 
   .product-name p {
     margin: 0;
@@ -265,17 +262,17 @@
     margin-right: 5px;
   }
 
-  .image-product {
+  /* .image-product {
     width: 100%;
-    display: flex;
-    justify-content: center;
+    height: 230px;
+    border: 1px solid blue;
   }
 
   .image-product img {
     width: 100%;
-    height: 230px;
-    border-radius: 24px;
-  }
+    height: 100%;
+    object-fit: contain;
+  } */
 
   footer {
     display: flex;
@@ -401,4 +398,26 @@
 
   .sosmed-icon svg:nth-of-type(3){
     fill : rgb(71, 202, 210);
+  }
+
+  .produk {
+    width: 100%;
+    column-gap: 1%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .daftar-produk {
+    width: 19%;
+  }
+
+  .gambar-produk {
+    width: 100%;
+    height: 230px;
+  }
+
+  .gambar-produk img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
