--- a/style.css
+++ b/style.css
@@ -38,22 +38,24 @@
   .button {
     display: flex;
     width: 20%;
-    justify-content: space-between;
+    gap: 10%;
   }
 
   .button button {
-    width: 104px;
+    width: 50%;
     height: 36px;
     border-radius: 100px;
     font-family: 'Red Hat Display', sans-serif;
   }
 
   #login {
+    font-size: 1vw;
     color: rgb(255, 255, 255);
     background-color: rgb(3, 3, 3);
   }
 
   #signup {
+    font-size: 1vw;
     background-color: rgb(255, 255, 255);
     border: 1px solid;
   }
@@ -221,15 +223,6 @@
     border: 1px solid green;
   } */
 
-  .product-name p {
-    margin: 0;
-    font-size: 14px;
-    color: rgba(3, 3, 3, 0.7);
-    line-height: 20px;
-    letter-spacing: 0;
-    margin-bottom: 4px;
-  }
-
   .title {
     display: block;
     width: 100%;
@@ -248,18 +241,30 @@
   }
 
   .product-name {
+    width: 100%;
     display: flex;
     justify-content: space-between;
+  }
+
+  .product-name p {
+    width: 70%;
+    margin: 0;
+    font-size: 14px;
+    color: rgba(3, 3, 3, 0.7);
+    line-height: 20px;
+    letter-spacing: 0;
+    margin-bottom: 4px;
   }
 
   .like {
     width: 30%;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
   .like p {
-    margin-right: 5px;
+    margin-right: 1px;
   }
 
   /* .image-product {
@@ -420,4 +425,39 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+  }
+
+  @media only screen and (max-width: 1024px) {
+    #signup {
+      font-size: 1.35vw;
+    }
+
+    #login {
+      font-size: 1.35vw;
+    }
+
+    .nav ul li {
+      font-size: 1.35vw;
+    }
+
+    .jumbotron h2 {
+      font-size: 4vw;
+    }
+
+    .o-button {
+      width: 40%;
+    }
+
+    .product-name p {
+      width: 65%;
+      font-size: 1.35vw;
+    }
+
+    .like {
+      width: 35%;
+    }
+
+    .like p {
+      font-size: 1.25vw;
+    }
   }
